responsive 320 375 425 768 1024 1336 1440 1920 listo pendiente pulir detalles en resoluciones 768 para abajo

--- a/index.html
+++ b/index.html
@@ -177,6 +177,75 @@
         <section class="directorio">
           <h2>Directorio Gestión 2025</h2>
 
+          <div class="directorioStatic">
+            <article class="miembro_container">
+              <img
+                src="https://placehold.co/300?text=Foto\nPresidente"
+                alt=""
+              />
+              <div class="miembros_text">
+                <h3>Dr. Juan Jose Gallardo</h3>
+                <p>Presidente</p>
+              </div>
+            </article>
+
+            <article class="miembro_container">
+              <img
+                src="https://placehold.co/300?text=Foto\nPresidente"
+                alt=""
+              />
+              <div class="miembros_text">
+                <h3>Dr. Juan Jose Gallardo</h3>
+                <p>Presidente</p>
+              </div>
+            </article>
+
+            <article class="miembro_container">
+              <img
+                src="https://placehold.co/300?text=Foto\nPresidente"
+                alt=""
+              />
+              <div class="miembros_text">
+                <h3>Dr. Juan Jose Gallardo</h3>
+                <p>Presidente</p>
+              </div>
+            </article>
+
+            <article class="miembro_container">
+              <img
+                src="https://placehold.co/300?text=Foto\nPresidente"
+                alt=""
+              />
+              <div class="miembros_text">
+                <h3>Dr. Juan Jose Gallardo</h3>
+                <p>Presidente</p>
+              </div>
+            </article>
+
+            <article class="miembro_container">
+              <img
+                src="https://placehold.co/300?text=Foto\nPresidente"
+                alt=""
+              />
+              <div class="miembros_text">
+                <h3>Dr. Juan Jose Gallardo</h3>
+                <p>Presidente</p>
+              </div>
+            </article>
+
+            <article class="miembro_container">
+              <img
+                src="https://placehold.co/300?text=Foto\nPresidente"
+                alt=""
+              />
+              <div class="miembros_text">
+                <h3>Dr. Juan Jose Gallardo</h3>
+                <p>Presidente</p>
+              </div>
+            </article>
+
+          </div>
+
           <!-- Swiper -->
           <div class="swiper directorioSwiper">
             <div class="swiper-wrapper">
@@ -250,7 +319,7 @@
             <a href="#">
               <i class="bi bi-person-badge"></i>
               <h4>Comités</h4>
-              <p>Conoce a los miembros y funciones de cada comité de la SCN</p>
+              <p id="comiteIconoHome">Conoce a los miembros y funciones de cada comité de la SCN</p>
             </a>
           </div>
 
@@ -315,7 +384,7 @@
 
           <h4>Sociedad Cochabambina de Neurocirugía</h4>
 
-          <p>email: <br /><span>contacto@sociedadneurologica.cbb.org</span></p>
+          <p>email: <br /><span>contacto@neurocirugiacochabamba.com</span></p>
           <p>teléfono: <br /><span>+591 74539874</span></p>
           <div class="rrss_container">
             <a href="#">
@@ -397,7 +466,7 @@
           modifier: 1,
           slideShadows: true,
         },
-        loop: true,
+        // loop: true,
         // autoplay: {
         //   delay: 3000,
         //   disableOnInteraction: false,
