responsive todos los tamaños listo

--- a/actividades.html
+++ b/actividades.html
@@ -114,7 +114,7 @@
             <summary>
               <h3 id="actividadesPasadas">Eventos Pasados <span>/</span></h3>
             </summary>
-            <section class="sectionPasados">
+            <section class="sectionPasados" id="sectionPasados">
               <p>
                 <a href="#">
                   Jornada de atencion gratuita para adultos Mayores (14/05/24)
@@ -142,11 +142,14 @@
     </main>
 
     <footer>
-      <div class="footer_container">
-        <section class="contacto">
-          <h4>Sociedad Cochabambina de Neurocirugía</h4>
 
-          <p>email: <br /><span>contacto@sociedadneurologica.cbb.org</span></p>
+      <h4>Sociedad Cochabambina de Neurocirugía</h4>
+
+      <div class="footer_container">
+
+        <section class="contacto">
+          
+          <p>email: <br /><span>contacto@neurocirugiacochabamba.com</span></p>
           <p>teléfono: <br /><span>+591 74539874</span></p>
           <div class="rrss_container">
             <a href="#">
@@ -167,23 +170,26 @@
         <section class="paginas">
           <p>Páginas:</p>
           <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#">Inicio</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="asociados.html">Asociados</a></li>
-            <li><a href="#">Actividades</a></li>
+            <li><a href="actividades.html">Actividades</a></li>
             <li><a href="recursos.html">Recursos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </section>
 
-        <p class="rights">
+      </div>
+
+      <p class="rights">
           &copy; Copy right 2025 - Sociedad Cochabambina de Neurocirugía
         </p>
         <p class="a_stack">
-          Design: A-Stack Dev <br />(create/conect/accelerate)
+          Powered By: A-Stack Dev <br />(create/conect/accelerate)
         </p>
-      </div>
+
     </footer>
+
 
     <script type="module" src="./main.js"></script>
 
