--- a/contacto.html
+++ b/contacto.html
@@ -77,15 +77,14 @@
     </main>
 
     <footer>
+
+      <h4>Sociedad Cochabambina de Neurocirugía</h4>
+
       <div class="footer_container">
+
         <section class="contacto">
-          <!-- <picture>
-            <img src="img/logo_dorado-removebg-preview.png" alt="logo_cbnc" />
-          </picture> -->
-
-          <h4>Sociedad Cochabambina de Neurocirugía</h4>
-
-          <p>email: <br /><span>contacto@sociedadneurologica.cbb.org</span></p>
+          
+          <p>email: <br /><span>contacto@neurocirugiacochabamba.com</span></p>
           <p>teléfono: <br /><span>+591 74539874</span></p>
           <div class="rrss_container">
             <a href="#">
@@ -106,23 +105,26 @@
         <section class="paginas">
           <p>Páginas:</p>
           <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="#">Inicio</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="asociados.html">Asociados</a></li>
             <li><a href="actividades.html">Actividades</a></li>
             <li><a href="recursos.html">Recursos</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </section>
 
-        <p class="rights">
+      </div>
+
+      <p class="rights">
           &copy; Copy right 2025 - Sociedad Cochabambina de Neurocirugía
         </p>
         <p class="a_stack">
-          Design: A-Stack Dev <br />(create/conect/accelerate)
+          Powered By: A-Stack Dev <br />(create/conect/accelerate)
         </p>
-      </div>
+
     </footer>
+
 
     <script type="module" src="./main.js"></script>
 
