--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               </div>
             </article>
 
-            <a href="actividades.html#proximosEventos">Ver Más</a>
+            <a href="actividades.html">Ver Más</a>
           </div>
 
           <div class="eventos_pasados">
@@ -168,7 +168,7 @@
               </div>
             </article>
 
-            <a id="boton_2" href="actividades.html#actividadesPasadas">
+            <a id="boton_2" href="actividades.html#sectionPasados">
               Ver Más
             </a>
           </div>
@@ -312,11 +312,13 @@
               </div>
             </div>
           </div>
+
+           <div class="swiper-pagination-directorio"></div>
         </section>
 
         <section class="recursos">
           <div class="recursos_container">
-            <a href="#">
+            <a href="asociados.html">
               <i class="bi bi-person-badge"></i>
               <h4>Comités</h4>
               <p id="comiteIconoHome">Conoce a los miembros y funciones de cada comité de la SCN</p>
@@ -324,7 +326,7 @@
           </div>
 
           <div class="recursos_container">
-            <a href="#">
+            <a href="asociados.html">
               <i class="bi bi-folder2-open"></i>
               <h4>Estatutos y Reglamentos</h4>
               <p>Conoce nuestros estatutos y reglamentos</p>
@@ -332,18 +334,17 @@
           </div>
 
           <div class="recursos_container">
-            <a href="#">
+            <a href="recursos.html">
               <i class="bi bi-tags-fill"></i>
-              <h4>Formar Parte de la Sociedad</h4>
+              <h4>Recursos Externos</h4>
               <p>
-                Forma parte de la SCN y disfruta de los beneficios de ser
-                miembro activo
+                Revistas Digitales y enlaces de interés
               </p>
             </a>
           </div>
 
           <div class="recursos_container">
-            <a href="#">
+            <a href="asociados.html">
               <i class="bi bi-zoom-in"></i>
               <h4>Lista de miembros</h4>
               <p>Conoce a todos nuestros miembros y sus especialidades</p>
@@ -376,14 +377,13 @@
     </main>
 
     <footer>
+
+      <h4>Sociedad Cochabambina de Neurocirugía</h4>
+
       <div class="footer_container">
+
         <section class="contacto">
-          <!-- <picture>
-            <img src="img/logo_dorado-removebg-preview.png" alt="logo_cbnc" />
-          </picture> -->
-
-          <h4>Sociedad Cochabambina de Neurocirugía</h4>
-
+          
           <p>email: <br /><span>contacto@neurocirugiacochabamba.com</span></p>
           <p>teléfono: <br /><span>+591 74539874</span></p>
           <div class="rrss_container">
@@ -414,13 +414,15 @@
           </ul>
         </section>
 
-        <p class="rights">
+      </div>
+
+      <p class="rights">
           &copy; Copy right 2025 - Sociedad Cochabambina de Neurocirugía
         </p>
         <p class="a_stack">
-          Design: A-Stack Dev <br />(create/conect/accelerate)
+          Powered By: A-Stack Dev <br />(create/conect/accelerate)
         </p>
-      </div>
+
     </footer>
 
     <script type="module" src="./main.js"></script>
@@ -442,12 +444,12 @@
           slideShadows: true,
         },
         loop: true,
-        // autoplay: {
-        //   delay: 3000,
-        //   disableOnInteraction: false,
-        // },
+        autoplay: {
+          delay: 3000,
+          disableOnInteraction: false,
+        },
         pagination: {
-          // el: ".swiper-pagination",
+          el: ".swiper-pagination",
           clickable: true,
         },
       });
@@ -466,13 +468,13 @@
           modifier: 1,
           slideShadows: true,
         },
-        // loop: true,
-        // autoplay: {
-        //   delay: 3000,
-        //   disableOnInteraction: false,
-        // },
+        loop: true,
+        autoplay: {
+          delay: 3000,
+          disableOnInteraction: false,
+        },
         pagination: {
-          // el: ".swiper-pagination",
+          el: ".swiper-pagination-directorio",
           clickable: true,
         },
       });
