--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <title>Sociedad Cochabambina de Neurocirugía</title>
     <script type="module" crossorigin src="/soc-web-page/assets/main-D0TYPaLx.js"></script>
-    <link rel="stylesheet" crossorigin href="./soc-web-page/assets/main-BcH9_B6u.css">
+    <link rel="stylesheet" crossorigin href="/soc-web-page/assets/main-BcH9_B6u.css">
   </head>
 
   <body>
